--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,11 +3,11 @@ backend:
   repo: ignaciodrd/personal_blog_ig # Ruta a tu repositorio
   branch: main # O la rama principal que estés usando
   
-  # --- ¡AQUÍ ESTÁ LA CORRECCIÓN! ---
-  # Esto le dice a Decap que use la autenticación de GitHub directamente
-  # en lugar de la de Netlify (que es el default).
-  base_url: https://ignaciodrd.github.io
-  auth_type: github
+  # --- CORRECCIÓN ---
+  # Hemos eliminado las líneas 'base_url' y 'auth_type: github'.
+  # Esto permitirá que Decap use el 'auth gateway' por defecto,
+  # que es un servicio gratuito que maneja el login con GitHub
+  # por nosotros.
   # --- Fin de la corrección ---
 
 media_folder: "assets/images" # Dónde guardar las imágenes
