--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,43 @@
 # Configuración básica de Jekyll
 title: Ignacio Duarte's Personal Blog
-description: Mi blog personal sobre mí, mis ideas y proyectos...
-url: "https://ignaciodrd.github.io" # La URL base de tu sitio
-baseurl: "/personal_blog_ig/" # El subdirectorio de tu sitio
+description: Mi blog personal sobre proyectos, reflexiones e ideas...
+url: "https://ignaciodrd.github.io"
+baseurl: "/personal_blog_ig"
 
 # Configuración de Markdown
 markdown: kramdown
+
+# Configuración de Colecciones
+collections:
+  proyectos:
+    output: true
+    permalink: /proyectos/:name/
+  reflexiones:
+    output: true
+    permalink: /reflexiones/:name/
+  otros:
+    output: true
+    permalink: /otros/:name/
+
+# Valores por defecto para cada colección
+defaults:
+  - scope:
+      path: ""
+      type: "proyectos"
+    values:
+      layout: "post"
+  - scope:
+      path: ""
+      type: "reflexiones"
+    values:
+      layout: "post"
+  - scope:
+      path: ""
+      type: "otros"
+    values:
+      layout: "post"
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
